--- a/backend-web/pom.xml
+++ b/backend-web/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>backend-web</artifactId>
+    <packaging>war</packaging>
+
     <dependencies>
         <dependency>
             <groupId>javax.ws.rs</groupId>
